--- a/hm1/p2.ipynb
+++ b/hm1/p2.ipynb
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HanFaye\\AppData\\Local\\Temp\\ipykernel_8116\\3415318514.py:12: UserWarning: The following kwargs were not used by contour: 'label'\n",
+      "C:\\Users\\HanFaye\\AppData\\Local\\Temp\\ipykernel_17412\\3415318514.py:12: UserWarning: The following kwargs were not used by contour: 'label'\n",
       "  plt.contour(XX, YY, Z, levels=[0, 1], colors='black', label='decison boundary')\n"
      ]
     },
@@ -298,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x258ef904510>"
+       "<matplotlib.legend.Legend at 0x26dbdba3c50>"
       ]
      },
      "execution_count": 13,
